	* Changed t3lib_basicFileFunctions to use filemtime() instead of filectime()
	* Fixed bug #4526: Add td-<number> to last table elements in CSS styled content (thanks to Dimitriy Simakov)
	* !!! Enable $TYPO3_CONF_VARS[FE][pageNotFoundOnCHashError] by default. This should usually do no harm at all as long as the encryptionKey is not changed.

2007-02-04  Oliver Hader  <oh@inpublica.de>

	* Features & bugfixes for Inline Relational Record Editing (IRRE)
		- Feature: hide new record link by appearance property
		- Feature #4838: enabled element browser to be used as selector
		- Bugfix #4839: use "size" parameter of parent table for record selector
		- Bugfix: changed handling of required fields on nested child records

2007-02-04  Ingmar Schlecht  <ingmar@typo3.org>

	* Instant collapsing for pagetree: The pagetree now doesn't wait for the AJAX response any more when collapsing
	* Fixed bug #4817: Clickmenu shows up at the wrong place (Thanks to Benjamin Mack for the patches)

2007-02-03  Oliver Hader  <oh@inpublica.de>

	* Fixed feature request: TCEforms/IRRE - Allow TSconfig to override TCA field configuration

2007-02-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Changed class.t3lib_clipboard.php and class.db_list_extra.inc to use new mod.php?M=xMOD_tximpexp (instead old impexp/app/index.php)

2007-01-30  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixing oddities in recursive stdWraps (bugs #4312 and #4871)
	* Fix bug #4678: t3lib_div::array2xml() may crash with PHP 5.2.0
	* Fix bug #3648: ease use of tslib_cObj::getTreeList()
	* Added SYS[requestURIvar] to get original value of REQUEST_URI (needed by some URL writers for IIS)

2007-01-30  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed never disappearing proposal to update database structure in Install>Database>COMPARE

2007-01-29  Dmitry Dulepov  <dmitry@typo3.org>

	* !!! Changed MySQL engine type for several database tables to InnoDB
	* Added several new indexes
